# foodgram-project

./: .gitignore  Dockerfile  README.md  docker-compose-prod.yaml  docker-compose.yaml  docker-compose.yaml.prod  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: foodgram_workflow.yaml
api/: urls.py  views.py
foodgram/: middlewares.py  settings.py  urls.py  views.py
recipe/: admin.py  forms.py  ingredients.csv  models.py  services.py  tests.py  urls.py  views.py
recipe/migrations/: 0001_initial.py  0002_auto_20210307_1328.py  0003_recipe_pub_date.py  0004_auto_20210308_2220.py  0005_auto_20210309_1200.py  0006_auto_20210309_1730.py  0007_auto_20210312_2049.py  0008_auto_20210316_2159.py  0009_auto_20210316_2203.py  0010_auto_20210319_0846.py
recipe/templates/misc/: 500.html
recipe/templates/recipe/: authorRecipe.html  author_recipe.html  favorite.html  myFollow.html  my_follow.html  recipe_form.html  shopList.html  shop_list.html  singlePageNotAuth.html  single_page.html
recipe/templatetags/: support_tags.py
static/: authorRecipe.js  custom.js  favorite.js  indexNotAuth.js  myFollow.js  singlePage.js  singlePageNotAuth.js
static/blocks/button/: button.css
static/js/api/: Api.js
static/pages/: myFollow.css
templates/: base.html  index.html  indexNotAuth.html
templates/includes/: footer.html  nav.html  pagination.html
templates/misc/: 404.html  500.html  tech.html
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20210312_2049.py  0003_auto_20210316_2211.py
(+13 files in other folders)
