[tool.poetry]
name = "foodgram-project"
version = "0.1.0"
description = ""
authors = ["Denis Matakov <matakov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.6.0"
django = "4.1.7"
django-autoslug = "1.9.8"
django-debug-toolbar = "3.8.1"
django-eml-email-backend = "0.1"
django-widget-tweaks = "1.4.12"
flake8 = "6.0.0"
google-images-download = "2.8.0"
gunicorn = "20.1.0"
mccabe = "0.7.0"
pillow = "9.4.0"
psycopg2-binary = "2.9.5"
pycodestyle = "2.10.0"
pyflakes = "3.0.1"
pytz = "2021.1"
reportlab = "3.6.12"
selenium = "4.8.3"
sqlparse = "0.4.3"
urllib3 = "1.26.15"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
